--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-<<<<<<< HEAD
-    "react-social-icons": "^4.1.0"
-=======
+    "react-social-icons": "^4.1.0",
     "react-spring": "^8.0.27"
->>>>>>> added text to cardinfo, animated with react spring css modules created
   },
   "scripts": {
     "start": "react-scripts start",
