--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
     "bootstrap": "^4.3.1",
     "lodash": "^4.17.14",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "react-social-icons": "^4.1.0",
-    "react-spring": "^8.0.27"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
